added cypress tests

--- a/song-recommender/src/app/app.component.html
+++ b/song-recommender/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="toolbar" role="banner">
   <a routerLink="/"><img height="40px" src="../assets/logo.jpg"/></a>
-  <a routerLink="/most-popular" class="nav-bar-buttons">Popular Songs</a>
+  <a routerLink="/most-popular" class="nav-bar-buttons" data-cy="popular-songs">Popular Songs</a>
 </div>
 
 
