--- a/song-recommender/src/app/most-popular/most-popular.component.html
+++ b/song-recommender/src/app/most-popular/most-popular.component.html
@@ -1,24 +1,31 @@
-<div class="card">
-    <div class="title">Most Popular Songs</div>
-    <p-table 
-    [value]="songs"
-    [rows]="5"
-    [showCurrentPageReport]="true"
-    [tableStyle]="{ 'min-width': '50rem' }"
-    >
-        <ng-template pTemplate="header" let-columns>
-            <tr>
-                <th>Name </th>
-                <th>Artist</th>
-                <th>Genre</th>
-            </tr>
-        </ng-template>
-        <ng-template pTemplate="body" let-product let-columns="columns">
-            <tr>
-                <td>{{product.name}}</td>
-                <td>{{product.artist}}</td>
-                <td><p-tag [value]="product.genre" [severity]="getSeverity(product.genre)"></p-tag></td>
-            </tr>
-        </ng-template>
-    </p-table>
-</div>
+<ng-container *ngIf="{
+    popularSongs: popularSongs$ | async 
+} as observables;" >
+    <div class="card">
+        <div class="title">Most Popular Songs</div>
+        <p-table 
+        [value]="observables.popularSongs"
+        [paginator]="true"
+        [rows]="10"
+        [showCurrentPageReport]="true"
+        [tableStyle]="{ 'min-width': '50rem' }"
+        currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
+        >
+            <ng-template pTemplate="header" let-columns>
+                <tr>
+                    <th>Name </th>
+                    <th>Artist</th>
+                    <th>Album</th>
+                </tr>
+            </ng-template>
+            <ng-template pTemplate="body" let-song let-columns="columns">
+                <tr>
+                    <td>{{song.trackname}}</td>
+                    <td>{{song.artistname}}</td>
+                    <td>{{song.albumname}}</td>
+                    <!-- <td><p-tag [value]="song.genre" [severity]="getSeverity(song.genre)"></p-tag></td> -->
+                </tr>
+            </ng-template>
+        </p-table>
+    </div>
+</ng-container>
