--- a/song-recommender/src/app/songs-grid/songs-grid.component.html
+++ b/song-recommender/src/app/songs-grid/songs-grid.component.html
@@ -1,26 +1,31 @@
-<div class="card homepage-grid">
-    <p-table 
-    [value]="songs"
-    [paginator]="true"
-    [rows]="10"
-    [showCurrentPageReport]="true"
-    [tableStyle]="{ 'min-width': '50rem' }"
-    currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
-    [rowsPerPageOptions]="[10, 25, 50]"
-    >
-        <ng-template pTemplate="header" let-columns>
-            <tr>
-                <th>Name </th>
-                <th>Artist</th>
-                <th>Genre</th>
-            </tr>
-        </ng-template>
-        <ng-template pTemplate="body" let-product let-columns="columns">
-            <tr>
-                <td>{{product.name}}</td>
-                <td>{{product.artist}}</td>
-                <td><p-tag [value]="product.genre" [severity]="getSeverity(product.genre)"></p-tag></td>
-            </tr>
-        </ng-template>
-    </p-table>
-</div>
+<ng-container *ngIf="{
+    songsData: songs$ | async 
+} as observables;" >
+    <div class="card homepage-grid">
+        <p-table 
+        [value]="observables?.songsData?.content"
+        [paginator]="true"
+        [rows]="10"
+        [showCurrentPageReport]="true"
+        [tableStyle]="{ 'min-width': '50rem' }"
+        currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
+        [rowsPerPageOptions]="[10, 25, 50]"
+        >
+            <ng-template pTemplate="header" let-columns>
+                <tr>
+                    <th>Name </th>
+                    <th>Artist</th>
+                    <th>Year</th>
+                </tr>
+            </ng-template>
+            <ng-template pTemplate="body" let-song let-columns="columns">
+                <tr>
+                    <td>{{song.title}}</td>
+                    <td>{{song.artistName}}</td>
+                    <td>{{song.year ? song.year : 1997 }}</td>
+                    <!-- <td><p-tag [value]="song.genre" [severity]="getSeverity(song.genre)"></p-tag></td> -->
+                </tr>
+            </ng-template>
+        </p-table>
+    </div>
+</ng-container>
