--- a/src/app/most-popular/most-popular.component.html
+++ b/src/app/most-popular/most-popular.component.html
@@ -2,7 +2,7 @@
     popularSongs: popularSongs$ | async 
 } as observables;" >
     <div class="card">
-        <div class="title">Most Popular Songs</div>
+        <div class="title">Top 50 Songs of the Day</div>
         <p-table 
         [value]="observables.popularSongs"
         [paginator]="true"
