--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <div class="toolbar" role="banner">
   <a routerLink="/"><img height="40px" src="../assets/logo.jpg"/></a>
-  <a routerLink="/most-popular" class="nav-bar-buttons" data-cy="popular-songs">Today's Top 50</a>
+  <a routerLink="/most-popular" class="nav-bar-buttons" data-cy="popular-songs">Top 50</a>
+  <a routerLink="/popular" class="nav-bar-buttons">Popular Songs</a>
 </div>
 
 
