--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -22,4 +22,7 @@ svg#clouds {
   .nav-bar-buttons {
     color: white;
     text-decoration: none;
+    margin: 0 16px;
+    font-size: large;
+    font-family: "Lucida Console", "Courier New", monospace;
   }
