added loading widget

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="toolbar" role="banner">
   <a routerLink="/"><img height="40px" src="../assets/logo.jpg"/></a>
   <a routerLink="/most-popular" class="nav-bar-buttons" data-cy="popular-songs">Top 50</a>
-  <a routerLink="/trends" class="nav-bar-buttons" data-cy="trends-button">Popular Songs</a>
+  <a routerLink="/trends" class="nav-bar-buttons" data-cy="trends-button">Trends</a>
 </div>
 
 <router-outlet></router-outlet>
