--- a/src/app/song-info/song-info.component.scss
+++ b/src/app/song-info/song-info.component.scss
@@ -14,3 +14,10 @@
     border: 4px solid #1976d2;
     margin: 16px;
 }
+
+.loading-circle {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 500px;
+}
