--- a/src/app/most-popular/most-popular.component.html
+++ b/src/app/most-popular/most-popular.component.html
@@ -1,31 +1,38 @@
 <ng-container *ngIf="{
     popularSongs: popularSongs$ | async 
 } as observables;" >
-    <div class="card">
-        <div class="title">Top 50 Songs of the Day</div>
-        <p-table 
-        [value]="observables.popularSongs"
-        [paginator]="true"
-        [rows]="10"
-        [showCurrentPageReport]="true"
-        [tableStyle]="{ 'min-width': '50rem' }"
-        currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
-        >
-            <ng-template pTemplate="header" let-columns>
-                <tr>
-                    <th>Name </th>
-                    <th>Artist</th>
-                    <th>Album</th>
-                </tr>
-            </ng-template>
-            <ng-template pTemplate="body" let-song let-columns="columns">
-                <tr>
-                    <td>{{song.trackname}}</td>
-                    <td>{{song.artistname}}</td>
-                    <td>{{song.albumname}}</td>
-                    <!-- <td><p-tag [value]="song.genre" [severity]="getSeverity(song.genre)"></p-tag></td> -->
-                </tr>
-            </ng-template>
-        </p-table>
+    <div *ngIf="observables?.popularSongs; else loading">
+        <div class="card">
+            <div class="title">Top 50 Songs of the Day</div>
+            <p-table 
+            [value]="observables.popularSongs"
+            [paginator]="true"
+            [rows]="10"
+            [showCurrentPageReport]="true"
+            [tableStyle]="{ 'min-width': '50rem' }"
+            currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
+            >
+                <ng-template pTemplate="header" let-columns>
+                    <tr>
+                        <th>Name </th>
+                        <th>Artist</th>
+                        <th>Album</th>
+                    </tr>
+                </ng-template>
+                <ng-template pTemplate="body" let-song let-columns="columns">
+                    <tr>
+                        <td>{{song.trackname}}</td>
+                        <td>{{song.artistname}}</td>
+                        <td>{{song.albumname}}</td>
+                        <!-- <td><p-tag [value]="song.genre" [severity]="getSeverity(song.genre)"></p-tag></td> -->
+                    </tr>
+                </ng-template>
+            </p-table>
+        </div>
     </div>
+    <ng-template #loading>
+        <div class="loading-circle">
+            <p-progressSpinner></p-progressSpinner>            
+        </div>
+    </ng-template>
 </ng-container>
