--- a/src/app/most-popular/most-popular.component.scss
+++ b/src/app/most-popular/most-popular.component.scss
@@ -2,3 +2,10 @@
     font-size: xx-large;
     margin: 12px 0;
 }
+
+.loading-circle {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 500px;
+}
