--- a/src/app/songs-grid/songs-grid.component.html
+++ b/src/app/songs-grid/songs-grid.component.html
@@ -1,34 +1,41 @@
 <ng-container *ngIf="{
     songsData: songs$ | async 
 } as observables;" >
-    <div class="card homepage-grid">
-        <p-table 
-        [value]="observables?.songsData?.content"
-        [paginator]="true"
-        [rows]="10"
-        [showCurrentPageReport]="true"
-        [tableStyle]="{ 'min-width': '50rem' }"
-        currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
-        [rowsPerPageOptions]="[10, 25, 50]"
-        selectionMode="single"
-        dataKey="trackId"
-        (onRowSelect)="showSongInfo($event)"
-        >
-            <ng-template pTemplate="header" let-columns>
-                <tr>
-                    <th>Name </th>
-                    <th>Artist</th>
-                    <th>Year</th>
-                </tr>
-            </ng-template>
-            <ng-template pTemplate="body" let-song let-columns="columns">
-                <tr class="song-record" [pSelectableRow]="song">
-                    <td>{{song.title}}</td>
-                    <td>{{song.artistName}}</td>
-                    <td>{{song.year ? song.year : getYear() }}</td>
-                    <!-- <td><p-tag [value]="song.genre" [severity]="getSeverity(song.genre)"></p-tag></td> -->
-                </tr>
-            </ng-template>
-        </p-table>
+    <div *ngIf="observables?.songsData?.content; else loading">
+        <div class="card homepage-grid">
+            <p-table 
+            [value]="observables?.songsData?.content"
+            [paginator]="true"
+            [rows]="10"
+            [showCurrentPageReport]="true"
+            [tableStyle]="{ 'min-width': '50rem' }"
+            currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
+            [rowsPerPageOptions]="[10, 25, 50]"
+            selectionMode="single"
+            dataKey="trackId"
+            (onRowSelect)="showSongInfo($event)"
+            >
+                <ng-template pTemplate="header" let-columns>
+                    <tr>
+                        <th>Name </th>
+                        <th>Artist</th>
+                        <th>Year</th>
+                    </tr>
+                </ng-template>
+                <ng-template pTemplate="body" let-song let-columns="columns">
+                    <tr class="song-record" [pSelectableRow]="song">
+                        <td>{{song.title}}</td>
+                        <td>{{song.artistName}}</td>
+                        <td>{{song.year ? song.year : getYear() }}</td>
+                        <!-- <td><p-tag [value]="song.genre" [severity]="getSeverity(song.genre)"></p-tag></td> -->
+                    </tr>
+                </ng-template>
+            </p-table>
+        </div>
     </div>
+    <ng-template #loading>
+        <div class="loading-circle">
+            <p-progressSpinner></p-progressSpinner>            
+        </div>
+    </ng-template>
 </ng-container>
